# goibniu

./: .pre-commit-config.yaml  DOCUMENTATION.md  README.md  pyproject.toml  tutorial.md
.github/workflows/: goibniu-ci.yml
docs/adr/: ADR-0001-avoid-eval.md  ADR-0001-goibniu-architecture-governance.md  ADR-0002-fastapi-for-mcp.md  ADR-0003-version-ai-context.md  ADR-0004-adr-rules-and-compliance.md  ADR-0005-openapi-and-api-compliance.md  ADR-0006-rfe-required-on-conflict.md  ADR-0007-security-baseline-no-eval-exec-shell.md  ADR-0008-no-network-in-analyzers.md  ADR-0009-prompts-and-personas-under-source-control-and-mcp.md  ADR-0010-avoid-wildcard-imports.md
examples/example_service/: main.py
src/goibniu/: adr.py  agent_bootstrap.py  api.py  api_compliance.py  compliance.py  component.py  mcp.py  playbook.py  scaffold.py  system.py
src/goibniu/agent_interface/: agent_profile_goibniu.md
src/goibniu/cli/: __main__.py
src/goibniu/personas/: adr_guard_agent.json  adr_semantic_auditor.json  implementation_agent.json  system_planner_agent.json
src/goibniu/prompts/: adr_compliance.md  adr_generation.md  adr_semantic_compliance.md  design_review.md  implementation_planner.md  rfe_submission.md
templates/: adr_template.md  rfe_template.md
tests/: test_api_extractor.py  test_bootstrap_agent_profile.py  test_compliance.py  test_mcp.py  test_system_extractor.py  tests_ai_context_structure.py
